# SAGE

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SAGE_PLAN.md  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: ci.yml
dashboard/: template.html
deploy/: cloud-run.md  deploy-cloud-run.ps1  render.md
sage/: __init__.py  app.py  config.py  dispatcher.py  router.py
sage/agents/: __init__.py  auth_cache_test.py  base.py  commit_keeper.py  decision_extractor.py  followup.py  health_auditor.py  onboarding.py  pr_review.py  premortem.py  reply_handler.py  sage_ask.py
sage/cli/: __init__.py  dashboard.py  main.py  migrate.py  stats.py  util.py  validate.py
sage/github/: __init__.py  auth.py  comments.py  fetcher.py  webhooks.py
sage/memory/: __init__.py  models.py  store.py  vector_store.py
sage/tools/: __init__.py  definitions.py  handlers.py
tests/: __init__.py  conftest.py  test_agent_runner.py  test_agents.py  test_cli_dashboard.py  test_fetcher.py  test_github_auth.py  test_memory_store.py  test_router.py  test_tool_handlers.py  test_webhooks.py
